# robot_kinematic_services

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
config/: solver.yaml
include/robot_kinematic_services/: kinematic_services.hpp
launch/: robot_kinematic_services.launch
msg/: Solution.msg  SolverStatus.msg
src/: kinematic_services.cpp
srv/: ForwardKinematics.srv  InverseKinematics.srv
test/: test_kinematic_services.cpp  test_kinematic_services.test
